--- a/people.html
+++ b/people.html
@@ -16,12 +16,18 @@
     People I admire, work with, and love (ongoing list):
 
 <ul style="list-style-type: none; display: inline-block;">
-  <li style="margin-bottom: 10px;"></listyle><a href="https://luisedgarmejicanos.com/">Luis Edgar Mejicanos</a></li>
-  <li style="margin-bottom: 10px;"></listyle><a href="https://www.rinagoldfield.com/">Rina Goldfield</a></li>
-  <li style="margin-bottom: 10px;"><a href="richplease.info/">Kyle Richardson</a></li>
+  <li style="margin-bottom: 10px;"><a href="https://luisedgarmejicanos.com/">Luis Edgar Mejicanos</a></li>
+  <li style="margin-bottom: 10px;"><a href="https://www.rinagoldfield.com/">Rina Goldfield</a></li>
+  <li style="margin-bottom: 10px;"><a href="http://richplease.info/">Kyle Richardson</a></li>
   <li style="margin-bottom: 10px;"><a href="https://10000racquets.love/">Darnell Henderson</a></li>
   <li style="margin-bottom: 10px;"><a href="https://www.ang-z-z.com/">Ang Ziqi Zhang</a></li>
   <li style="margin-bottom: 10px;"><a href="http://www.madisondonnelly.com/">Madison Donnelly</a></li>
+  <li style="margin-bottom: 10px;"><a href="https://www.instagram.com/davisleathernyc/">Isaiah Davis</a></li>
+  <li style="margin-bottom: 10px;"><a href="https://www.instagram.com/ayabrown.tiff/">Aya Brown</a></li>
+  <li style="margin-bottom: 10px;"><a href="https://www.instagram.com/leoskates38/">Leo Flores</a></li>
+  <li style="margin-bottom: 10px;"><a href="https://valentina-vergara.com/">Valentina Vergara</a></li>
+  <li style="margin-bottom: 10px;"><a href="https://www.juanluismatos.com/">Juan Luis Matos</a></li>
+  
 </ul>
 
 <ul style="list-style-type: none; display: inline-block;">
@@ -31,7 +37,10 @@
   <li style="margin-bottom: 10px;"><a href="https://www.mandengarchives.com/">Marcelline Mandeng Nken</a></li>
   <li style="margin-bottom: 10px;"><a href="https://www.yacinetilalafall.com/">Yacine Tilala Fall</a></li>
   <li style="margin-bottom: 10px;"><a href="https://www.beverlyacha.com/">Beverly Acha</a></li>
-    <li style="margin-bottom: 10px;"><a href="https://www.davionalston.com/">Davion Alston</a></li>
+   <li style="margin-bottom: 10px;"><a href="https://www.davionalston.com/">Davion Alston</a></li>
+   <li style="margin-bottom: 10px;"><a href="https://anizainiguez.com/">Aniza Vega Iñiguez</a></li>    <li style="margin-bottom: 10px;"><a href="https://thomasblair.studio/">Thomas Blair</a></li>
+    <li style="margin-bottom: 10px;"><a href="https://www.instagram.com/imsofuntohangoutwith/?hl=e">Vanessa Leiva Santos</a></li>
+    <li style="margin-bottom: 10px;"><a href="https://www.instagram.com/_bambina.___/">Asia Perrotti</a></li>
 </ul>
 
 
