--- a/people.html
+++ b/people.html
@@ -27,8 +27,10 @@
   <li style="margin-bottom: 10px;"><a href="https://www.instagram.com/leoskates38/">Leo Flores</a></li>
   <li style="margin-bottom: 10px;"><a href="https://valentina-vergara.com/">Valentina Vergara</a></li>
   <li style="margin-bottom: 10px;"><a href="https://www.juanluismatos.com/">Juan Luis Matos</a></li>
-  
-  
+  <li style="margin-bottom: 10px;"><a href="https://www.instagram.com/nileharris/?hl=en">Nile Harris</a></li>
+  <li style="margin-bottom: 10px;"><a href="http://justinallen.studio/">Justin Allen</a></li>
+  <li style="margin-bottom: 10px;"><a href="https://andrew-ordonez.com/">Andrew Ordoñez</a></li>
+  <li style="margin-bottom: 10px;"><a href="http://www.erickalejandrohernandez.com/p/selected-paintings.html">Erick Alejandro Hernandez</a></li>
 </ul>
 
 <ul style="list-style-type: none; display: inline-block;">
@@ -39,11 +41,15 @@
   <li style="margin-bottom: 10px;"><a href="https://www.yacinetilalafall.com/">Yacine Tilala Fall</a></li>
   <li style="margin-bottom: 10px;"><a href="https://www.beverlyacha.com/">Beverly Acha</a></li>
    <li style="margin-bottom: 10px;"><a href="https://www.davionalston.com/">Davion Alston</a></li>
-   <li style="margin-bottom: 10px;"><a href="https://anizainiguez.com/">Aniza Vega Iñiguez</a></li>    <li style="margin-bottom: 10px;"><a href="https://thomasblair.studio/">Thomas Blair</a></li>
+   <li style="margin-bottom: 10px;"><a href="https://anizainiguez.com/">Aniza Vega Iñiguez</a></li>    
+   <li style="margin-bottom: 10px;"><a href="https://thomasblair.studio/">Thomas Blair</a></li>
     <li style="margin-bottom: 10px;"><a href="https://www.instagram.com/imsofuntohangoutwith/?hl=e">Vanessa Leiva Santos</a></li>
     <li style="margin-bottom: 10px;"><a href="https://www.instagram.com/_bambina.___/">Asia Perrotti</a></li>
+    <li style="margin-bottom: 10px;"><a href="http://www.ninahartmann.com/">Nina Hartmann</a></li>
+    <li style="margin-bottom: 10px;"><a href="http://nicolecombeau.com/">Nicole Combeau</a></li>
+    <li style="margin-bottom: 10px;"><a href="https://www.papsouleyefall.com/"> Pap Souleye Fall</a></li>
+    <li style="margin-bottom: 10px;"><a href="https://yasunaga.work/">Lucas Yasunaga</a></li>
 </ul>
-
 
 
 </p>
