updating MDPLS, keys and ceiling

--- a/ceiling.html
+++ b/ceiling.html
@@ -12,17 +12,19 @@
 
 <body>
 
-  <div class="video-container">
-    <iframe class="video"
-      src="https://player.vimeo.com/video/814364899?h=50a1051200&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
-      frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-  </div>
-
-  <p style="color: white;"><i>Frameworks_Ceiling_Sheet1copy</i>, 2023<br>
-    Antenna drop ceiling, Etched aluminum, radio, cables, aircraft cable, gripples, hardware
-  </p>
-
   <main class="ceiling">
+
+    <div class="video-container grid-item">
+      <video controls>
+        <source src="ceiling.mp4" loop="" playsinline loop></video>
+      </video>
+    </div>
+  
+    <p style="color: white;"><i>Frameworks_Ceiling_Sheet1copy</i>, 2023<br>
+      Antenna drop ceiling, Etched aluminum, radio, cables, aircraft cable, gripples, hardware
+    </p>
+
+    <div></div>
 
     <div class="grid-item image1">
       <img src="imgs/Ceiling/AlumBox.jpg" alt="" loading="lazy" />
@@ -32,26 +34,6 @@
       <img src="imgs/Ceiling/HeartBit.jpg" alt="" loading="lazy" />
     </div>
 
-    <div class="grid-item image3">
-      <img src="imgs/Ceiling/IronTile.jpg" alt="" loading="lazy" />
-    </div>
-
-    <div class="grid-item image4">
-      <img src="imgs/Ceiling/Outlets.gif" alt="" loading="lazy" />
-    </div>
-
-    <div class="grid-item image7">
-      <img src="imgs/Ceiling/drawing.jpg" alt="" loading="lazy" />
-    </div>
-
-    <div class="grid-item image5">
-      <img src="imgs/Ceiling/Scan2.jpeg" alt="" loading="lazy" />
-    </div>
-
-    <div class="grid-item image6">
-      <img src="imgs/Ceiling/Scan3.jpg" alt="" loading="lazy" />
-    </div>
- 
     <div class="grid-item caption1">
       <p style="color: white;"><i>Tamperproof Heart Bolts</i>, 2023<br>
         Brass<br>
@@ -63,22 +45,50 @@
       </p>
     </div>
 
-    <div class="grid-item caption3">
-      <p style="color: white;"><i>Frameworks_Tile_Sheet1copy_D2</i>, 2023<br>
-        Graphite on Denril and acrylic
-      </p>
+    <div class="grid-item image5">
+      <img src="imgs/Ceiling/Scan2.jpeg" alt="" loading="lazy" />
     </div>
 
-    <div class="grid-item caption4">
+    <div class="grid-item image6">
+      <img src="imgs/Ceiling/Scan3.jpg" alt="" loading="lazy" />
+    </div>
+ 
+    
+    <div class="grid-item image4">
+      <img src="imgs/Ceiling/Outlets.gif" alt="" loading="lazy" />
+    </div>
+
+    <div></div>
+
+   <div class="grid-item caption4">
       <p style="color: white;"><i>OutletCovers_3-8, 2023</i><br>
       Acrylic<br></p>
     </div>
 
+    <div></div>
+
     <div class="grid-item caption5">
       <p style="color: white;"><i>Frameworks_Tile_Sheet1copy_H5</i>, 2023<br> 
         Iron and miscellaneous objects</p>
+    </div>
 
-      </p>
+     <div class="grid-item image3">
+          <img src="imgs/Ceiling/IronTile.jpg" alt="" loading="lazy" />
+        </div>
+
+        <div class="grid-item caption3">
+          <p style="color: white;"><i>Frameworks_Tile_Sheet1copy_D2</i>, 2023<br>
+            Graphite on Denril and acrylic
+          </p>
+        </div>
+
+    <div class="grid-item image7">
+      <img src="imgs/Ceiling/drawing.jpg" alt="" loading="lazy" />
+    </div>
+  
+
+
+
     </div>
 
   </main>
