--- a/index.html
+++ b/index.html
@@ -17,11 +17,18 @@
   <div class="carousel">
     <div class="slide">
       <div class="container">
-        <a href="ceiling.html"><img class="ceiling" src="Outlines/white/ceiling.svg" alt="thesis artwork"
+
+        <a href="glassrailing.html"><img class="glassrailing" src="Outlines/white/glassrailing2.svg" alt="glassrailing"
             loading="lazy" /></a>
+
+         <a href="door.html"><img class="door" src="Outlines/white/door2.svg" alt="door artwork"
+              loading="lazy" /></a>
 
         <a href="railing.html"><img class="railing" src="Outlines/white/railing.svg" alt="railing" /></a>
 
+        <a href="ceiling.html"><img class="ceiling" src="Outlines/white/ceiling.svg" alt="thesis artwork"
+            loading="lazy" /></a>
+            
         <a href="long-key.html"><img class="long-key" src="Outlines/white/key_white.svg" alt="long bronze key"
             loading="lazy" /></a>
 
@@ -39,7 +46,6 @@
         <a href="bench.html"><img class="Bench" src="Outlines/white/bench_white.svg" alt="bench artwork"
             loading="lazy" /></a>
 
-
         <a href="billboard.html"><img class="billboard" src="Outlines/white/billboard_white.svg" alt="billboard artwork"
             loading="lazy" /></a>
 
@@ -54,7 +60,6 @@
 
         <a href="https://cache-cache.money/"><img
               class="fulanita" src="Outlines/white/magnifyingglass.svg" loading="lazy" /></a>
-         
 
         <a href="https://docs.google.com/spreadsheets/d/1QminhjPAfdsEO6YoBMa7Aa51HmZBIksU07rTDb5QR2A/edit?usp=sharing"><img
             class="folder" src="Outlines/white/folder_white.png" loading="lazy" /></a>
