--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <div class="slide">
       <div class="container">
 
+        <a href="ibeam.html"><img class="ibeam" src="Outlines/white/ibeam.svg" alt="ibeam"
+            loading="lazy" /></a>
+
         <a href="glassrailing.html"><img class="glassrailing" src="Outlines/white/glassrailing2.svg" alt="glassrailing"
             loading="lazy" /></a>
 
@@ -64,9 +67,9 @@
         <a href="https://docs.google.com/spreadsheets/d/1QminhjPAfdsEO6YoBMa7Aa51HmZBIksU07rTDb5QR2A/edit?usp=sharing"><img
             class="folder" src="Outlines/white/folder_white.png" loading="lazy" /></a>
 
-        <a href="people.html"><img
+        <!-- <a href="people.html"><img
             class="people" src="Outlines/white/box_white.png" loading="lazy" /></a>
-        </div>
+        </div> -->
       
     </div>
   </div>
