--- a/ibeam.html
+++ b/ibeam.html
@@ -14,7 +14,7 @@
 <body id="railing">
 
   <main><center>
-    <img src="imgs/IBeam/Trodden Path_Installation Views 10.jpg" width="40%" loading="lazy">
+    <img src="imgs/IBeam/ibeam.jpg" width="40%" loading="lazy">
   </center>
   </main>
 
