--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="container">
 
 
-        <a href="ibeam.html"><img class="ibeam" src="Outlines/ibeam.svg" alt="ibeam"
+        <a href="ibeam.html"><img class="ibeam" src="Outlines/white/ibeam.svg" alt="ibeam"
             loading="lazy" /></a>
 
         <a href="glassrailing.html"><img class="glassrailing" src="Outlines/white/glassrailing2.svg" alt="glassrailing"
