--- a/ibeam.html
+++ b/ibeam.html
@@ -14,7 +14,7 @@
 <body id="railing">
 
   <main><center>
-    <img src="imgs/IBeam/ibeam.jpg" width="40%" loading="lazy">
+    <img src="imgs/ibeam/ibeam.jpg" width="40%" loading="lazy">
   </center>
   </main>
 
