--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a href="long-key.html"><img class="long-key" src="Outlines/white/key_white.svg" alt="long bronze key"
             loading="lazy" /></a>
 
-        <a href="antennas.html"><img class="antennas" src="Outlines/white/railing_white.svg" alt="antennas artwork"
+        <a href="antennas.html"><img class="antennas" src="Outlines/white/antenna.svg" alt="antennas artwork"
             loading="lazy" /></a>
 
         <a href="spiral.html"><img class="spiral" src="Outlines/white/spiral_white.svg" loading="lazy" /></a>
