--- a/ibeam.html
+++ b/ibeam.html
@@ -19,9 +19,8 @@
       <img src="imgs/ibeam/ibeam.jpg" loading="lazy" class="clickable-image"/>
     </div>
 
-
     <div class="grid-item i2">
-      <p style="color: white;"><i>Money Rail (left)</i>, 2023<br> 
+      <p style="color: white;"><i>Money I-Beam</i>, 2023<br> 
         Plexilass, keys, bills, coins</p>
         </div>
   
