--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <a href="billboard.html"><img class="billboard" src="Outlines/white/billboard_white.svg" alt="billboard artwork"
             loading="lazy" /></a>
 
-        <a href="maracas.html"><img class="maracas" src="Outlines/white/maracas_white.svg" alt="maracas artwork"
+        <a href="fence.html"><img class="fence" src="Outlines/white/fence.svg" alt="fence"
             loading="lazy" /></a>
 
         <a href="nails.html"><img class="nails" src="Outlines/white/nails_white.svg" alt="nails artwork"
