--- a/fence.html
+++ b/fence.html
@@ -40,13 +40,13 @@
         <img src="imgs/Fence/fence4.jpg" loading="lazy" class="clickable-image"/>
       </div>
 
+      </body>
+
+      </html></main>
+
     <p style="color: white;"><i>Precarious Infrastrcutures, (Fence)</i>, 2023<br> 
       Borosilicate Glass and Aluminum
       </p>
-
-    </body>
-
-  </main>
 
       <script>
         const images = document.querySelectorAll('.clickable-image');
@@ -65,3 +65,5 @@
       });
       </script>
       </html>
+
+      
