--- a/fence.html
+++ b/fence.html
@@ -24,9 +24,9 @@
         <img src="imgs/Fence/fence6.jpg" loading="lazy" class="clickable-image"/>
       </div>
 
-      <div class="row-item f3">
+      <!-- <div class="row-item f3">
         <img src="imgs/Fence/fence2.jpg" loading="lazy" class="clickable-image"/>
-      </div>
+      </div> -->
 
       <div class="row-item f4">
         <img src="imgs/Fence/fence3.jpg" loading="lazy" class="clickable-image"/>
@@ -36,9 +36,9 @@
         <img src="imgs/Fence/fence5.jpg" loading="lazy" class="clickable-image"/>
       </div>
 
-      <div class="row-item f6">
+      <!-- <div class="row-item f6">
         <img src="imgs/Fence/fence4.jpg" loading="lazy" class="clickable-image"/>
-      </div>
+      </div> -->
 
       </body>
 
