--- a/fence.html
+++ b/fence.html
@@ -44,7 +44,7 @@
 
       </html></main>
 
-    <p style="color: white;"><i>Precarious Infrastrcutures, (Fence)</i>, 2023<br> 
+    <p style="color: white;"><i>Precarious Infrastructures (Fence),</i> 2023<br> 
       Borosilicate Glass and Aluminum
       </p>
 
