--- a/fence.html
+++ b/fence.html
@@ -45,7 +45,7 @@
       </html></main>
 
     <p style="color: white;"><i>Precarious Infrastructures (Fence),</i> 2023<br> 
-      Borosilicate Glass and Aluminum
+      Borosilicate Glass and Aluminum.
       </p>
 
       <script>
