--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
         <div class="slide">
             <div class="container">
 
-               
-
-                <!-- <a href="longfence.html"><img class="longfence" src="Outlines/white/long_fence.png" alt="longfence"
-                        loading="lazy" /></a> -->
+                <a href="longfence.html"><img class="longfence" src="Outlines/white/long_fence.png" alt="longfence"
+                        loading="lazy" /></a>
 
                 <a href="ceiling.html"><img class="ceiling" src="Outlines/white/ceiling.svg" alt="thesis artwork"
                         loading="lazy" /></a>
