--- a/longfence.html
+++ b/longfence.html
@@ -10,21 +10,20 @@
   <link rel="icon" type="image/png" href="dove.png" />
 </head>
 
-<body>
+<body id="longfence">
 
   <main class="longfence">
 
-    <div class="longfence1">
+    <div class="lf1">
       <img src="imgs/longfence/Helena Anrather Apple Stretching.jpg" alt="" loading="lazy" class="clickable-image"/>
     </div>
 
-    <div class="longfence2">
+    <div class="lf2">
       <img src="imgs/longfence/Helena Anrather Apple Stretching (1).jpg" alt="" loading="lazy"  class="clickable-image"/>
     </div>
 
-    <div class="longfence3">
-      <p style="color: white;"><i>Tamperproof Heart Bolts</i>, 2023<br>
-        Brass<br>
+    <div class="lf3">
+      <p style="color: white;"><i>Precarious Infrastructures</i>, 2024<br>Glass<br>	32" x 1/4" x 11'<br>
       </p>
     </div>
 
