--- a/longfence.html
+++ b/longfence.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>▦</title>
+  <title>⫘⫘⫘⫘</title>
   <link rel="stylesheet" href="stylesheet-pages.css" />
   <link rel="icon" type="image/png" href="dove.png" />
 </head>
@@ -23,7 +23,7 @@
     </div>
 
     <div class="lf3">
-      <p style="color: white;"><i>Precarious Infrastructures</i>, 2024<br>Glass<br>	32" x 1/4" x 11'<br>
+      <p style="color: white;"><i>Precarious Infrastructures</i>, 2024<br>Glass<br>
       </p>
     </div>
 
