fixing fence spacing, captions

--- a/fence.html
+++ b/fence.html
@@ -24,10 +24,6 @@
         <img src="imgs/Fence/fence6.jpg" loading="lazy" class="clickable-image"/>
       </div>
 
-      <!-- <div class="row-item f3">
-        <img src="imgs/Fence/fence2.jpg" loading="lazy" class="clickable-image"/>
-      </div> -->
-
       <div class="row-item f4">
         <img src="imgs/Fence/fence3.jpg" loading="lazy" class="clickable-image"/>
       </div>
@@ -36,17 +32,12 @@
         <img src="imgs/Fence/fence5.jpg" loading="lazy" class="clickable-image"/>
       </div>
 
-      <!-- <div class="row-item f6">
-        <img src="imgs/Fence/fence4.jpg" loading="lazy" class="clickable-image"/>
-      </div> -->
-
-      </body>
-
+      <p style="color: white;"><i>Precarious Infrastructures (Fence),</i> 2023<br> 
+        Borosilicate Glass and Aluminum. </p>
+    
       </html></main>
 
-    <p style="color: white;"><i>Precarious Infrastructures (Fence),</i> 2023<br> 
-      Borosilicate Glass and Aluminum.
-      </p>
+      </body>
 
       <script>
         const images = document.querySelectorAll('.clickable-image');
