--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                 <a href="long-key.html"><img class="long-key" src="Outlines/white/key_white.svg" alt="long bronze key"
                         loading="lazy" /></a>
 
+                <a href="glasskey.html"><img class="glasskey" src="Outlines/white/glasskey.svg" alt="glass key"
+                   loading="lazy" /></a>
 
                 <a href="door.html"><img class="door" src="Outlines/white/door2.svg" alt="door artwork"
                         loading="lazy" /></a>
