fixed caption spacing

--- a/nails.html
+++ b/nails.html
@@ -22,16 +22,14 @@
       <video src="nails-and-rocking-chair.mp4" autoplay="autoplay" loop="" autoplay muted loop playsinline></video>
     </div>
 
+    <div class="row-item n2">
+      <p style="color: white;"><i>Uñas acrilicas</i>, 2018<br>
+        Acrylic nails, tube, magnets, motor, arduino, acrylic holder, paperclips
+      </p>
+    </div>
+
   </main>
-
-  <p style="color: white;"><i>Uñas acrilicas</i>, 2018<br> 
-    Acrylic nails, tube, magnets, motor, arduino, acrylic holder, paperclips
- </p>>
-
-
 
 </body>
 
 </html>
-
-
