--- a/railing.html
+++ b/railing.html
@@ -13,13 +13,34 @@
 
 <body id="railing">
 
-  <main><center>
-    <img src="imgs/Railing/Railing.jpg" width="90%" loading="lazy">
-  </center>
+  <main>
+    <div class="row-item r1">
+      <img src="imgs/Railing/Railing.jpg" loading="lazy" class="clickable-image"/>
+    </div>
+
+    <div class="grid-item r2">
+      <p style="color: white;"><i>RailingDetour_Sheet1_A1:A6_B1:E1</i>, 2023<br> 
+        Steel, paint, hardware
+     </p>
+        </div>
+
   </main>
 
-  <p style="color: white;"><i>RailingDetour_Sheet1_A1:A6_B1:E1</i>, 2023<br> 
-    Steel, paint, hardware
- </p>>
+  <script>
+    const images = document.querySelectorAll('.clickable-image');
+  images.forEach(image => {
+    image.addEventListener('click', () => {
+      const enlargedImage = document.createElement('div');
+      enlargedImage.classList.add('enlarged-image');
+      const img = document.createElement('img');
+      img.src = image.src;
+      enlargedImage.appendChild(img);
+      document.body.appendChild(enlargedImage);
+      enlargedImage.addEventListener('click', () => {
+        document.body.removeChild(enlargedImage);
+      });
+    });
+  });
+  </script>
 
 </body>
