--- a/glasskey.html
+++ b/glasskey.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="grid-item gk2">
-      <p style="color: white;"><i>Precarious Infrastructures (keys)</i>, 2023<br> glass and brass
+      <p style="color: white;"><i>Precarious Infrastructures (keys)</i>, 2023<br> Glass and brass
   </p>
         </div>
 
