--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
                 <a href="ceiling.html"><img class="ceiling" src="Outlines/white/ceiling.svg" alt="thesis artwork"
                         loading="lazy" /></a>
+                        
+                <a href="turnstile.html"><img class="turnstile" src="Outlines/white/turnstile2.svg" alt="turnstile" loading="lazy" /></a>
 
                 <a href="fence.html"><img class="fence" src="Outlines/white/fence.svg" alt="fence" loading="lazy" /></a>
 
