white text, turnstile animation

--- a/fence.html
+++ b/fence.html
@@ -33,7 +33,7 @@
       </div>
 
       <p style="color: white;"><i>Precarious Infrastructures (Fence),</i> 2023<br> 
-        Borosilicate Glass and Aluminum. </p>
+        Borosilicate Glass and Aluminum </p>
     
       </html></main>
 
