--- a/turnstile.html
+++ b/turnstile.html
@@ -9,17 +9,12 @@
 </head>
 
 <body>
-    <table>
-      <tbody>
-        <tr class="turnstile" height="300">
-          <td width="580">
-            <img src="imgs/turnstile/TurnstileEdited2.jpg" width="500" loading="lazy">
-            <img src="imgs/turnstile/Arm1.jpg" width="500" loading="lazy">
-            <img src="imgs/turnstile/CloseUp.jpg" width="500" loading="lazy">
-            <p color="white">Fare, 2024<BR>
-              Powder coated aluminum, glass, miscellaneous deposits	24" x 31" x 42"</p>
-      </tbody>
-    </table>
-   
+            <img src="imgs/turnstile/TurnstileEdited2.jpg" width="500" loading="lazy" class="clickable-image"/>
+            <img src="imgs/turnstile/Arm1.jpg" width="500" loading="lazy" class="clickable-image"/>
+            <img src="imgs/turnstile/CloseUp.jpg" width="500" loading="lazy" class="clickable-image"/>
+            <p style="color: white;"><i> Fare</i>, 2024<br> 
+              Powder coated aluminum, glass, miscellaneous deposits<br>
+              24" x 31" x 42"
+           </p>
   </body>
 </html>
